--- a/templates/register.html
+++ b/templates/register.html
@@ -20,7 +20,6 @@
 </head>
 <body>
 
-    {% include 'partials/topbar.html' %}
     {% include 'partials/navbar.html' %}
 
     <!-- Register Section -->
@@ -45,15 +44,18 @@
                             <label for="email" class="form-label">Adresse Email</label>
                             <input type="email" class="form-control" id="email" name="email" required autofocus>
                         </div>
+                    
                         <div class="mb-3">
                             <label for="password" class="form-label">Mot de passe</label>
-                            <input type="password" class="form-control" id="password" name="password" required>
+                            <input type="password" class="form-control" id="password" name="password" oninput="verifierMotDePasse()" required>
+                            <div id="feedback" class="form-text text-danger mt-1"></div>
                         </div>
+                    
                         <div class="d-grid">
                             <button type="submit" class="btn btn-primary">S’inscrire</button>
                         </div>
                     </form>
-
+                    
                     <div class="text-center mt-3">
                         <small>Déjà un compte ? <a href="{{ url_for('login') }}">Connecte-toi ici</a></small>
                     </div>
@@ -81,5 +83,6 @@
 
     <!-- Template Javascript -->
     <script src="static/js/main.js"></script>
+    <script src="static/js/register.js"></script>
 </body>
 </html>
