--- a/static/css/style.css
+++ b/static/css/style.css
@@ -489,8 +489,39 @@ h6,
     background-color: var(--dark);
 }
 
+#gdpr-delete-account {
+    margin-top: 40px;
+    padding: 20px;
+    border: 1px solid #e74c3c;
+    background-color: #fff0f0;
+    border-radius: 5px;
+}
+
+.delete-button {
+    background-color: #e74c3c;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.delete-button:hover {
+    background-color: #c0392b;
+}
+
 @media (min-width: 767.98px) {
     .footer-about {
         margin-bottom: -75px;
     }
+}
+
+.sticky-top.navbar-dark {
+    position: fixed;
+    background: var(--dark);
+}
+
+.sticky-top.navbar-dark .navbar-nav .nav-link {
+    padding: 20px 0;
+    color: #fff; /* Texte blanc */
 }
