--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -7,7 +7,7 @@
                         <a href="/templates/index.php" class="navbar-brand">
                             <h1 class="m-0 text-white"><i class="fa fa-user-tie me-2"></i>CyberTools</h1>
                         </a>
-                        <p class="mt-3 mb-4">Lorem diam sit erat dolor elitr et, diam lorem justo amet clita stet eos sit. Elitr dolor duo lorem, elitr clita ipsum sea. Diam amet erat lorem stet eos. Diam amet et kasd eos duo.</p>
+                        <p class="mt-3 mb-4">Pour plus d'informations ou reclamations n'hesitez pas a nous contacter a cette adresse mail !</p>
                         <form action="">
                             <div class="input-group">
                                 <input type="text" class="form-control border-white p-3" placeholder="Your Email">
@@ -20,15 +20,15 @@
                     <div class="row gx-5">
                         <div class="col-lg-4 col-md-12 pt-5 mb-5">
                             <div class="section-title section-title-sm position-relative pb-3 mb-4">
-                                <h3 class="text-light mb-0">Get In Touch</h3>
+                                <h3 class="text-light mb-0">Plus d'infos</h3>
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-geo-alt text-primary me-2"></i>
-                                <p class="mb-0">123 Street, New York, USA</p>
+                                <p class="mb-0">Toulouse, France</p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-primary me-2"></i>
-                                <p class="mb-0">info@example.com</p>
+                                <p class="mb-0">n.mancino03@gmail.com</p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-telephone text-primary me-2"></i>
@@ -43,28 +43,28 @@
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                             <div class="section-title section-title-sm position-relative pb-3 mb-4">
-                                <h3 class="text-light mb-0">Quick Links</h3>
+                                <h3 class="text-light mb-0">Liens Rapidees</h3>
                             </div>
                             <div class="link-animated d-flex flex-column justify-content-start">
-                                <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                                <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                                <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Meet The Team</a>
-                                <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest Blog</a>
-                                <a class="text-light" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                                <a class="text-light mb-2" href="/index"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                                <a class="text-light mb-2" href="{{ url_for('dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Mon Compte</a>
+                                <a class="text-light mb-2" href="{{ url_for('register', next='dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>S'inscrire</a>
+                                <a class="text-light mb-2" href="{{ url_for('login', next='dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Se Connecter</a>
+                                <a class="text-light mb-2" href="{{ url_for('password') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Generer un mot de passse</a>
+                                <a class="text-light" href="{{ url_for('password') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Tester un mot de passe</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                             <div class="section-title section-title-sm position-relative pb-3 mb-4">
-                                <h3 class="text-light mb-0">Popular Links</h3>
+                                <h3 class="text-light mb-0">Liens Populaires</h3>
                             </div>
                             <div class="link-animated d-flex flex-column justify-content-start">
-                                <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                                <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                                <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Meet The Team</a>
-                                <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest Blog</a>
-                                <a class="text-light" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                                <a class="text-light mb-2" href="/index"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                                <a class="text-light mb-2" href="{{ url_for('analyze_page') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Analyser Un Site</a>
+                                <a class="text-light mb-2" href="{{ url_for('password') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Generer un mot de passe</a>
+                                <a class="text-light mb-2" href="{{ url_for('password') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Tester un mot de passe</a>
+                                <a class="text-light mb-2" href="{{ url_for('dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Mon Compte</a>
+                                <a class="text-light" href="{{ url_for('login', next='dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Se Connecter</a>
                             </div>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
             <div class="row justify-content-end">
                 <div class="col-lg-8 col-md-6">
                     <div class="d-flex align-items-center justify-content-center" style="height: 75px;">
-                        <p class="mb-0">&copy; <a class="text-white border-bottom" href="#">Your Site Name</a>. All Rights Reserved. 
+                        <p class="mb-0">&copy; <a class="text-white border-bottom" href="#">CyberTools</a>. All Rights Reserved. 
 						
 						<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
 						<!-- Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
