--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -18,13 +18,12 @@
                     </div>
                 </div>
             </div>
-            <button type="button" class="btn text-primary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></button>
             {% if session.get('user_id') %}
                 <a href="{{ url_for('dashboard') }}" class="btn btn-outline-light ms-3">👤 Mon compte</a>
                 <a href="{{ url_for('logout') }}" class="btn btn-primary py-2 px-4 ms-2">Déconnexion</a>
             {% else %}
                 <a href="{{ url_for('login', next='dashboard') }}" class="btn btn-outline-light ms-3">🔐 Connexion</a>
-                <a href="{{ url_for('register') }}" class="btn btn-primary py-2 px-4 ms-2">Inscription</a>
+                <a href="{{ url_for('register', next='dashboard') }}"class="btn btn-primary py-2 px-4 ms-2">Inscription</a>
             {% endif %}        
         </div>
     </nav>
