--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -7,7 +7,7 @@
                         <a href="/templates/index.php" class="navbar-brand">
                             <h1 class="m-0 text-white"><i class="fa fa-user-tie me-2"></i>CyberTools</h1>
                         </a>
-                        <p class="mt-3 mb-4">Pour plus d'informations ou reclamations n'hesitez pas a nous contacter a cette adresse mail !</p>
+                        <p class="mt-3 mb-4">Pour plus d'informations ou réclamations, n'hesitez pas à nous contacter à cette adresse mail !</p>
                         <form action="">
                             <div class="input-group">
                                 <input type="text" class="form-control border-white p-3" placeholder="Your Email">
@@ -43,28 +43,28 @@
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                             <div class="section-title section-title-sm position-relative pb-3 mb-4">
-                                <h3 class="text-light mb-0">Liens Rapidees</h3>
+                                <h3 class="text-light mb-0">Liens rapides</h3>
                             </div>
                             <div class="link-animated d-flex flex-column justify-content-start">
                                 <a class="text-light mb-2" href="/index"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-light mb-2" href="{{ url_for('dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Mon Compte</a>
+                                <a class="text-light mb-2" href="{{ url_for('dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Mon compte</a>
                                 <a class="text-light mb-2" href="{{ url_for('register', next='dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>S'inscrire</a>
-                                <a class="text-light mb-2" href="{{ url_for('login', next='dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Se Connecter</a>
-                                <a class="text-light mb-2" href="{{ url_for('password') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Generer un mot de passse</a>
+                                <a class="text-light mb-2" href="{{ url_for('login', next='dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Se connecter</a>
+                                <a class="text-light mb-2" href="{{ url_for('password') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Générer un mot de passe</a>
                                 <a class="text-light" href="{{ url_for('password') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Tester un mot de passe</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                             <div class="section-title section-title-sm position-relative pb-3 mb-4">
-                                <h3 class="text-light mb-0">Liens Populaires</h3>
+                                <h3 class="text-light mb-0">Liens populaires</h3>
                             </div>
                             <div class="link-animated d-flex flex-column justify-content-start">
                                 <a class="text-light mb-2" href="/index"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-light mb-2" href="{{ url_for('analyze_page') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Analyser Un Site</a>
-                                <a class="text-light mb-2" href="{{ url_for('password') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Generer un mot de passe</a>
+                                <a class="text-light mb-2" href="{{ url_for('analyze_page') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Analyser un site</a>
+                                <a class="text-light mb-2" href="{{ url_for('password') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Générer un mot de passe</a>
                                 <a class="text-light mb-2" href="{{ url_for('password') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Tester un mot de passe</a>
-                                <a class="text-light mb-2" href="{{ url_for('dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Mon Compte</a>
-                                <a class="text-light" href="{{ url_for('login', next='dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Se Connecter</a>
+                                <a class="text-light mb-2" href="{{ url_for('dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Mon compte</a>
+                                <a class="text-light" href="{{ url_for('login', next='dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Se connecter</a>
                             </div>
                         </div>
                     </div>
