--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -9,12 +9,12 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
                 <a href="/index" class="nav-item nav-link">Menu</a>
-                <a href="{{ url_for('analyze_page') }}" class="nav-item nav-link">Analyser un Site</a>                
+                <a href="{{ url_for('analyze_page') }}" class="nav-item nav-link">Analyser un site</a>                
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Mot De Passe</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Mot de passe</a>
                     <div class="dropdown-menu m-0">
-                        <a href="{{ url_for('password') }}" class="dropdown-item">Generer un Mot de Passe Robuste</a>
-                        <a href="{{ url_for('password') }}" class="dropdown-item">Tester son Mot de Passe</a>
+                        <a href="{{ url_for('password') }}" class="dropdown-item">Générer un mot de passe robuste</a>
+                        <a href="{{ url_for('password') }}" class="dropdown-item">Tester son mot de passe</a>
                     </div>
                 </div>
             </div>
