--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
                             <h5 class="text-white text-uppercase mb-3 animated slideInDown">Cybertools</h5>
                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Bienvenue sur CyberTools</h1>
                             <a href="{{ url_for('password') }}" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Tester mon mot de passe</a>
-                            <a href="{{ url_for('password') }}" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Generer un mot de passe</a>
+                            <a href="{{ url_for('password') }}" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Générer un mot de passe</a>
                         </div>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                             <h5 class="text-white text-uppercase mb-3 animated slideInDown">CyberTools</h5>
                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Pas encore connecté</h1>
                             <a href="{{ url_for('login', next='dashboard') }}" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Se connecter</a>
-                            <a href="{{ url_for('register', next='dashboard') }}" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Creer un compte</a>
+                            <a href="{{ url_for('register', next='dashboard') }}" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Créer un compte</a>
                         </div>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                             <i class="fa fa-users text-primary"></i>
                         </div>
                         <div class="ps-4">
-                            <h5 class="text-white mb-0">Avis Positifs</h5>
+                            <h5 class="text-white mb-0">Avis positifs</h5>
                             <h1 class="text-white mb-0" data-toggle="counter-up">345</h1>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                             <i class="fa fa-award text-primary"></i>
                         </div>
                         <div class="ps-4">
-                            <h5 class="text-white mb-0">Mot de Passe Securisés génerées</h5>
+                            <h5 class="text-white mb-0">Mots de passe securisés génerés</h5>
                             <h1 class="text-white mb-0" data-toggle="counter-up">1325</h1>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                             <i class="fa fa-code text-white"></i>
                         </div>
                         <h4 class="mb-3">Tester la robustesse de mon mot de passe</h4>
-                        <p class="m-0">Vous pouvez acceder a un testeur de mot de passe pour vous reduire vos risques de vous faire pirater et ensuite augmenter la robustesse de celui-ci</p>
+                        <p class="m-0">Vous pouvez accéder à un testeur de mot de passe pour reduire vos risques de vous faire pirater et ensuite augmenter la robustesse de celui-ci</p>
                         <a class="btn btn-lg btn-primary rounded" href="{{ url_for('password') }}">
                             <i class="bi bi-arrow-right"></i>
                         </a>
@@ -214,7 +214,7 @@
                         <div class="service-icon">
                             <i class="fa fa-search text-white"></i>
                         </div>
-                        <h4 class="mb-3">Tester la ribustesse de mon mot de passe</h4>
+                        <h4 class="mb-3">Tester la robustesse de mon mot de passe</h4>
                         <p class="m-0">Vous pouvez acceder a un testeur de mot de passe pour vous reduire vos risques de vous faire pirater</p>
                         <a class="btn btn-lg btn-primary rounded" href="">
                             <i class="bi bi-arrow-right"></i>
@@ -244,8 +244,8 @@
                         <div class="service-icon">
                             <i class="fa fa-shield-alt text-white"></i>
                         </div>
-                        <h4 class="mb-3">Creer un compte</h4>
-                        <p class="m-0">En créant votre compte vous pourrez accedez a des fonctionnalités spécifiques tels que la généeration d'un mot de passe ou encore l'analyse d'un site !</p>
+                        <h4 class="mb-3">Créer un compte</h4>
+                        <p class="m-0">En créant votre compte, vous pourrez accéder à des fonctionnalités spécifiques telles que la génération d'un mot de passe ou encore l'analyse d'un site !</p>
                         <a class="btn btn-lg btn-primary rounded" href="{{ url_for('register', next='dashboard') }}">
                             <i class="bi bi-arrow-right"></i>
                         </a>
@@ -257,7 +257,7 @@
                             <i class="fa fa-chart-pie text-white"></i>
                         </div>
                         <h4 class="mb-3">Se Connecter</h4>
-                        <p class="m-0">Si vous avez deja un compte n'attendez plus connectez vous !</p>
+                        <p class="m-0">Si vous avez déjà un compte, n'attendez plus, connectez vous !</p>
                         <a class="btn btn-lg btn-primary rounded" href="{{ url_for('login', next='dashboard') }}">
                             <i class="bi bi-arrow-right"></i>
                         </a>
@@ -269,7 +269,7 @@
                             <i class="fa fa-code text-white"></i>
                         </div>
                         <h4 class="mb-3">Tester la robustesse de mon mot de passe</h4>
-                        <p class="m-0">Vous pouvez acceder a un testeur de mot de passe pour vous reduire vos risques de vous faire pirater</p>
+                        <p class="m-0">Vous pouvez accéder à un testeur de mot de passe pour réduire les risques de vous faire pirater</p>
                         <a class="btn btn-lg btn-primary rounded" href="{{ url_for('password') }}">
                             <i class="bi bi-arrow-right"></i>
                         </a>
@@ -278,7 +278,7 @@
                 <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
                     <div class="position-relative bg-primary rounded h-100 d-flex flex-column align-items-center justify-content-center text-center p-5">
                         <h3 class="text-white mb-3">Contactez nous</h3>
-                        <p class="text-white mb-3">Pour plus d'informations ou reclamations n'hesitez pas a nous contacter a cette adresse mail !</p>
+                        <p class="text-white mb-3">Pour plus d'informations ou reclamations n'hesitez pas à nous contacter a cette adresse mail !</p>
                         <h2 class="text-white mb-0">n.mancino03@gmail.com</h2>
                     </div>
                 </div>
