deploy.yml connect to the droplet

--- a/templates/login.html
+++ b/templates/login.html
@@ -12,12 +12,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Bootstrap & Libs -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='lib/animate/animate.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
-</head>
+    <link href="{{ url_for('static', filename='css/style.css') }}?v=3" rel="stylesheet"></head>
 <body>
 
     {% include 'partials/navbar.html' %}
@@ -45,9 +45,24 @@
                             <input type="email" class="form-control" id="email" name="email" required autofocus>
                         </div>
                         <div class="mb-3">
-                            <label for="password" class="form-label">Mot de passe</label>
-                            <input type="password" class="form-control" id="password" name="password" required>
-                        </div>
+                            <label for="login_password" class="form-label">Mot de passe</label>
+                          
+                            <div class="position-relative">
+                              <input type="password"
+                                     id="login_password"
+                                     name="password"
+                                     class="form-control pe-5"
+                                     required
+                                     autocomplete="current-password">
+                          
+                              <button type="button"
+                                      class="btn-icon-eye position-absolute end-0 top-50 translate-middle-y me-2"
+                                      data-pw-toggle="login_password"
+                                      aria-label="Afficher le mot de passe 1 seconde">
+                                <i class="bi bi-eye fs-5"></i>
+                              </button>
+                            </div>
+                          </div>
                         <div class="d-grid">
                             <button type="submit" class="btn btn-primary">Se connecter</button>
                         </div>
@@ -75,7 +90,7 @@
     <script src="static/lib/waypoints/waypoints.min.js"></script>
     <script src="static/lib/counterup/counterup.min.js"></script>
     <script src="static/lib/owlcarousel/owl.carousel.min.js"></script>
-
+    <script src="{{ url_for('static', filename='js/pw_toggle.js') }}?v=3" defer></script>
     <!-- Template Javascript -->
     <script src="static/js/main.js"></script>
 </body>
